tests/init/neg/hello.scala
def foo = println("hello, world!" + a)  // error